# clamp-audio-compressor

./: .gitignore  CMakeLists.txt  README.md
src/: AudioEngine.cpp  AudioEngine.h  CompressorLookAndFeel.h  CompressorProcessor.cpp  CompressorProcessor.h  MainComponent.cpp  MainComponent.h  main.cpp
